--- a/application/templates/new_user.html
+++ b/application/templates/new_user.html
@@ -75,6 +75,10 @@
                 <td><input type="text" name="dept"><br></td>
             </tr>
             <tr>
+                <td><label>position:</label></td>
+                <td><input type="text" name="position"><br></td>
+            </tr>
+            <tr>
                 <td><label>select role:</label></td>
                 <td><input type="checkbox" name="role" value="employee">employee<br>
                     <input type="checkbox" name="role" value="manager">manager<br>
