--- a/application/templates/summary_report.html
+++ b/application/templates/summary_report.html
@@ -14,6 +14,7 @@
                     <td>Draft submitted by manager</td>
                     <td>Registered</td>
                     <td>Approved</td>
+                    <td>Completion</td>
                 </tr>
 
     {% for dept_info in summary %}
@@ -27,6 +28,7 @@
                     <td>{{dept_info.man_submit}}</td>
                     <td>{{dept_info.reg}}</td>
                     <td>{{dept_info.approved}}</td>
+                    <td>{{dept_info.percent}}</td>
 
                 </tr>
 
