--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -59,7 +59,7 @@
                     <td>{{pr.manager.email}}</td>
                     <td><input type="text" _key="{{pr.key}}" class="date" name="finish" value="{{pr.date}}"></td>
                     <td>
-                        <a href="#" onclick="load('/pr/get/manager/{{pr.key}}')">{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}} form</a>
+                        <a href="#" onclick="load('/hr/get/{{pr.key}}')">{{pr.employee.first_name}}&nbsp;{{pr.employee.last_name}} form</a>
                     </td>
 
                     <td>
