--- a/application/templates/api.manager_form.html
+++ b/application/templates/api.manager_form.html
@@ -3,81 +3,67 @@
 {% block script %}
 <script type="text/javascript">
 
-var form_key= '{{key}}';
-var form_type='{{type}}';
+var form_key= '{{form.key}}';
+var form_type='{{form.pr.period.type}}';
 
 
 $(document).ready(function() {
 
-    $('.add_button').click(function() {
-        var button = $(this);
-        var table = button.parent().attr('id');
-        $.post(
-            '/pr/data/add',
-            {form_key: form_key, table: table},
-            function(data){
-                $('<input type="text" size="75">').attr('id',data).focusout(function(){
-                    $.post('/pr/data/update/'+ this.id,{value: this.value});
-                    make_text(this)}).insertBefore(button);
-            })
-
-            })
-
-    })
-
-    if ('{{status}}' == 'approved'){
+    if ('{{form.status}}' == 'approved'){
         $('input:text').attr('readonly', 'readonly');
-        $('.add_button').attr('disabled', 'disabled')
+        $('.add_button').attr('disabled', 'disabled');
     }
-    if ('{{status}}' == 'submitted'){
+    if ('{{form.status}}' == 'submitted'){
         $('.input_div').html('');
-        $('#info').append('<p>form temporary unavailable</p>')
+        $('#info').append('<p>form temporary unavailable</p>');
     }
-    if ('{{status}}' == 'registered'){
+    if ('{{form.status}}' == 'registered'){
         
         $('#{{data.salary.key}}').attr('readonly', 'readonly');
         $('#{{data.grade.key}}').attr('readonly', 'readonly');
     }
 
     $('#approve').click(function(){
-        $.get('/pr/manager/approve/' +form_key);
+        $.get('/pr/manager/approve/' + form_key);
         $('input:text').attr('readonly', 'readonly');
-        $('.add_button').attr('disabled', 'disabled')
-    })
+        $('.add_button').attr('disabled', 'disabled');
+    });
 
     $('#submit').click(function(){
-        $.get('/pr/manager/submit/' +form_key, function(data){
+        $.get('/pr/manager/submit/' + form_key, function(data){
             if (data == 'ok'){
                 $('input:text').attr('readonly', 'readonly');
-                $('.add_button').attr('disabled', 'disabled')
+                $('.add_button').attr('disabled', 'disabled');
             }
             else{
-                alert(data)
+                alert(data);
             }
         })
+        })
     })
+
 
 </script>
 {% endblock %}
 
 {% block content %}
 <div id="info">
-<p>Performance Review Form for {{emp.first_name}} {{emp.last_name}}</p>
-<p>date: {{date}}</p>
+<p>Performance Review Form for {{form.pr.employee.first_name}} {{form.pr.employee.last_name}}</p>
+<p>date: {{form.pr.date}}</p>
 </div>
 
 <div id="project" class="input_div">
     <p>Please list all projects and initiatives you participated in during this performance review period.</p>
-    {% for project in data.projects %}
+    {% for project in form.projects %}
         <p class='text_field' onclick="make_input(this)" id="{{project.key}}">{{project.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="prev_achievements">
     <a href="#" onclick="display(this)">Previous achievements</a>
     <div class='hidden'>
-        {% for achievement in prev_achievements %}
+        {% for achievement in prev_pr.achievements %}
             <p>{{achievement.value}}</p>
         {% endfor %}
     </div>
@@ -85,24 +71,24 @@ $(document).ready(function() {
 
 <div id="achievements" class="input_div">
     <p>What do you consider to be your key accomplishments since your last review?</p>
-    {% for ach in data.achievements %}
+    {% for ach in form.achievements %}
         <p class='text_field' onclick="make_input(this)" id="{{ach.key}}">{{ach.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="responsibility" class="input_div">
     <p>List your key job responsibilities during your performance period. Please comment on your job performance assessment.</p>
-    {% for responsibility in data.responsibilities %}
+    {% for responsibility in form.responsibilities %}
         <p class='text_field' onclick="make_input(this)" id="{{responsibility.key}}">{{responsibility.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this,'{{form.key}}')" value="add" >
 </div>
 
 <div id="prev_challenges">
     <a href="#" onclick="display(this)">Previous challenges</a>
     <div class='hidden'>
-        {% for challenge in prev_challenges %}
+        {% for challenge in prev_pr.challenges %}
             <p>{{challenge.value}}</p>
         {% endfor %}
     </div>
@@ -110,20 +96,20 @@ $(document).ready(function() {
 
 <div id="challenges" class="input_div">
     <p>If you have experienced challenges, please specify the areas where you need to focus and improve. </p>
-    {% for challenge in data.challenges %}
+    {% for challenge in form.challenges %}
         <!-- todo: use css class instead of properties -->
         <p class='text_field' onclick="make_input(this)" id="{{challenge.key}}">{{challenge.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this,'{{form.key}}')" value="add" >
 </div>
 
 <div id="skill" class="input_div">
     <p>Please mention what skills and/or knowledge do you need for further development to contribute to your overall job success.</p>
-    {% for skill in data.skills %}
+    {% for skill in form.skills %}
         <!-- todo: use css class instead of properties -->
         <p class='text_field' onclick="make_input(this)" id="{{skill.key}}" >{{skill.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="prev_goals" class="input_div">
@@ -136,7 +122,7 @@ $(document).ready(function() {
                 <td>Value</td>
             </tr>
         </thead>
-    {% for prev_goal in prev_goals %}
+    {% for prev_goal in prev_pr.goals %}
         <tr>
             <td>{{prev_goal.value}}</td>
             <td>
@@ -157,89 +143,80 @@ $(document).ready(function() {
 
 <div id="next_goals" class="input_div">
     <p>Goals for the next period:</p>
-    {% for goal in data.next_goals %}
+    {% for goal in form.next_goals %}
         <p class='text_field' onclick="make_input(this)" id="{{goal.key}}" >{{goal.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="career" class="input_div">
     <p>What are your professional interests and long-term career objectives, and what are you plans to accomplish these objectives?  </p>
-    {% for career in data.careers %}
+    {% for career in form.careers %}
         <p class='text_field' onclick="make_input(this)" id="{{career.key}}" >{{career.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="issue" class="input_div">
     <p>Do you see any issues with your role within the company and/or your project(s)?</p>
-    {% for issue in data.issues %}
+    {% for issue in form.issues %}
         <p class='text_field' onclick="make_input(this)" id="{{issue.key}}" >{{issue.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="complaint" class="input_div">
     <p>Do you have any complaints?</p>
-    {% for complaint in data.complaints %}
+    {% for complaint in form.complaints %}
         <p class='text_field' onclick="make_input(this)" id="{{complaint.key}}" >{{complaint.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id="manager_help" class="input_div">
     <p>Is there anything your manager could do to help you do a better job? </p>
-    {% for manager_help in data.manager_helps %}
+    {% for manager_help in form.manager_helps %}
         <p class='text_field' onclick="make_input(this)" id="{{manager_help.key}}" >{{manager_help.value}}</p>
     {% endfor %}
-    <input type="button" class="add_button" value="add" >
+    <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}')" value="add" >
 </div>
 
 <div id='salary' class="input_div">
     <p>Salary:</p>
-        {% if data.salary %}
-            <p class='text_field' onclick="make_input(this)" id="{{data.salary.key}}" >{{data.salary.value}}</p>
+        {% if form.get_all_data.salary %}
+            <p class='text_field' onclick="make_input(this)" id="{{form.get_all_data.salary.key}}" >{{form.get_all_data.salary.value}}</p>
         {% else %}
-            <input type="button" class="add_button" value="add" >
+            <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}'); $(this).css('display','none')" value="add" >
         {% endif %}
 </div>
 
 <div id='grade' class="input_div">
     <p>Grade:</p>
-    {% if data.grade %}
-        <p class='text_field' onclick="make_input(this)"  id="{{data.grade.key}}" >{{data.grade.value}}</p>
+    {% if form.get_all_data.grade %}
+        <p class='text_field' onclick="make_input(this)" id="{{form.get_all_data.grade.key}}" >{{form.get_all_data.grade.value}}</p>
     {% else %}
-        <input type="button" class="add_button" value="add" >
+        <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}'); $(this).css('display','none')" value="add" >
     {% endif %}
 </div>
 
 <div id='position' class="input_div">
-    <p>Current Position: {{emp.position}}</p>
+    <p>Current Position: {{form.pr.employee.position}}</p>
     <p>New position:</p>
-    {% if data.position %}
-        <p class='text_field' onclick="make_input(this)"  id="{{data.position.key}}" >{{data.position.value}}</p>
+    {% if form.get_all_data.position %}
+        <p class='text_field' onclick="make_input(this)" id="{{form.get_all_data.position.key}}" >{{form.get_all_data.position.value}}</p>
     {% else %}
-        <input type="button" class="add_button" value="add" >
+        <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}'); $(this).css('display','none')" value="add" >
     {% endif %}
 </div>
 
 <div id='conclusion' class="input_div">
     <p>Conclusion:</p>
-    {% if data.conclusion %}
-        <p class='text_field' onclick="make_input(this)" id="{{data.conclusion.key}}" >{{data.conclusion.value}}</p>
+    {% if form.get_all_data.conclusion %}
+        <p class='text_field' onclick="make_input(this)" id="{{form.get_all_data.conclusion.key}}" >{{form.get_all_data.conclusion.value}}</p>
     {% else %}
-        <input type="button" class="add_button" value="add" >
+        <input type="button" class="add_button" onclick="add_data(this, '{{form.key}}'); $(this).css('display','none')" value="add" >
     {% endif %}
 </div>
-
-{% if comment %}
-<div id='comment' class="input_div">
-    <p>Comment:</p>
-        <p class='text_field' onclick="make_input(this)" id="{{comment.key}}" >{{comment.value}}</p>
-    {% else %}
-        <input type="button" class="add_button" value="add" >
-</div>
-{% endif %}
 
 <div id="file" class="input_div">
     <p>Attached files:</p>
@@ -257,7 +234,7 @@ $(document).ready(function() {
 </div>
 
 <div class="input_div">
-    {% ifequal status 'draft' %}
+    {% ifequal form.status 'draft' %}
         <input type="button" id='submit' value="submit">
     {% else %}
         <input type="button" id='approve' onclick="check_form()" value="approve">
