--- a/application/templates/new_user.html
+++ b/application/templates/new_user.html
@@ -14,6 +14,7 @@
                 last_name = $form.find( 'input[name="last_name"]' ).val(),
                 email = $form.find( 'input[name="email"]' ).val(),
                 dept = $form.find( 'input[name="dept"]' ).val(),
+                position = $form.find( 'input[name="position"]' ).val(),
                 manager = $form.find( 'select[name="manager"]' ).val(),
                 url = $form.attr( 'action' ),
                 role = '';
