--- a/application/templates/hr_table.html
+++ b/application/templates/hr_table.html
@@ -82,7 +82,9 @@
             {% endfor %}
         </table>
     {% endfor %}
-        <input type="button" class='register' value="register">
+        {% if periods %}
+            <input type="button" class='register' value="register">
+        {% endif %}
         <input type="button" value="Create New PR Period" onclick="load('/new_period')"><br>
         <input type="button" value="Show detail report" onclick="load('/hr/report/detailed')"><br>
         <input type="button" value="Show summary report" onclick="load('/hr/report/summary')"><br>
